--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,44 @@
-# Large binaries
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Testing
+coverage/
+
+# Production
+build/
+dist/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# System Files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Installers & Large Files (Specific to your project)
 *.exe
 *.msi
 *.zip
 *.vsix
+Lightshot/
 
-# Tools and System
-.vscode
-.snapshots
-Lightshot
-Zoom
-WindowsPowerShell
+# Google Cloud Credentials (SENSITIVE)
+*.json
+!package.json
+!package-lock.json
 
-# Dependencies
-node_modules
+# Local Snapshots
+.snapshots/
+.vscode/
