--- a/server/package.json
+++ b/server/package.json
@@ -10,17 +10,19 @@
         "seed-admin": "node scripts/seedAdmin.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "mongoose": "^7.6.3",
-        "dotenv": "^16.3.1",
-        "cors": "^2.8.5",
-        "jsonwebtoken": "^9.0.2",
+        "axios": "^1.6.2",
         "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "google-auth-library": "^10.5.0",
+        "google-spreadsheet": "^5.0.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.6.3",
+        "node-cron": "^3.0.3",
         "nodemailer": "^6.9.7",
         "qrcode": "^1.5.3",
-        "node-cron": "^3.0.3",
-        "socket.io": "^4.7.2",
-        "axios": "^1.6.2"
+        "socket.io": "^4.7.2"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
