--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.18.0",
     "socket.io-client": "^4.7.2",
     "react-icons": "^4.11.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "qrcode.react": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
